--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,85 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v4.widget.NestedScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:layout_margin="@dimen/dimen_16_dp"
-        android:id="@+id/constraintLayout">
-
-    <android.support.design.widget.TextInputLayout
-            android:id="@+id/inputLayoutDistancia"
+        android:layout_height="match_parent">
+    <android.support.constraint.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/inputLayoutPrice">
-        <android.support.design.widget.TextInputEditText
+            android:layout_height="match_parent"
+            tools:context=".MainActivity"
+            android:id="@+id/constraintLayout">
+
+        <EditText
                 android:id="@+id/editDistance"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/dimen_16_sp"
+                android:layout_height="@dimen/dimen_50dp"
+                android:textColor="@color/colorText"
+                android:textColorHint="@color/colorDarkGray"
+                android:textSize="@dimen/dimen_16sp"
                 android:hint="@string/distancia"
-                android:inputType="text"/>
-    </android.support.design.widget.TextInputLayout>
+                android:gravity="center"
+                android:elevation="@dimen/dimen_6dp"
+                android:inputType="number"
+                android:maxLines="1"
+                android:layout_marginTop="@dimen/dimen_15dp"
+                android:layout_marginLeft="@dimen/dimen_15dp"
+                android:layout_marginRight="@dimen/dimen_15dp"
+                android:background="@drawable/round_et"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-    <android.support.design.widget.TextInputLayout
-            android:id="@+id/inputLayoutPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/inputLayoutDistancia"
-            app:layout_constraintBottom_toTopOf="@id/inputLayoutAutonomy">
-        <android.support.design.widget.TextInputEditText
+        <TextView
+                android:id="@+id/labelDistancia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_2dp"
+                android:text="@string/total_de_quilometros"
+                android:textAllCaps="true"
+                android:textColor="@color/colorDarkGray"
+                android:textSize="@dimen/dimen_10sp"
+                app:layout_constraintTop_toBottomOf="@id/editDistance"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
                 android:id="@+id/editPrice"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/dimen_50dp"
+                android:textColor="@color/colorText"
+                android:textColorHint="@color/colorDarkGray"
+                android:textSize="@dimen/dimen_16sp"
                 android:hint="@string/preco"
-                android:inputType="text"/>
-    </android.support.design.widget.TextInputLayout>
+                android:gravity="center"
+                android:elevation="@dimen/dimen_6dp"
+                android:inputType="number"
+                android:maxLines="1"
+                android:layout_marginTop="@dimen/dimen_15dp"
+                android:layout_marginLeft="@dimen/dimen_15dp"
+                android:layout_marginRight="@dimen/dimen_15dp"
+                android:background="@drawable/round_et"
+                app:layout_constraintTop_toBottomOf="@id/labelDistancia"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-    <android.support.design.widget.TextInputLayout
-            android:id="@+id/inputLayoutAutonomy"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/inputLayoutPrice"
-            app:layout_constraintBottom_toTopOf="@id/textResult"
-            android:textAllCaps="true">
-        <android.support.design.widget.TextInputEditText
+        <TextView
+                android:id="@+id/labelPreco"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_2dp"
+                android:text="@string/preco_por_litro"
+                android:textAllCaps="true"
+                android:textColor="@color/colorDarkGray"
+                android:textSize="@dimen/dimen_10sp"
+                app:layout_constraintTop_toBottomOf="@id/editPrice"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
                 android:id="@+id/editAutonomy"
                 android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_50dp"
+                android:textColor="@color/colorText"
+                android:textColorHint="@color/colorDarkGray"
+                android:textSize="@dimen/dimen_16sp"
+                android:hint="@string/autonomia"
+                android:gravity="center"
+                android:elevation="@dimen/dimen_6dp"
+                android:inputType="number"
+                android:maxLines="1"
+                android:layout_marginTop="@dimen/dimen_15dp"
+                android:layout_marginLeft="@dimen/dimen_15dp"
+                android:layout_marginRight="@dimen/dimen_15dp"
+                android:background="@drawable/round_et"
+                app:layout_constraintTop_toBottomOf="@id/labelPreco"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+                android:id="@+id/labelAutonomy"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:hint="@string/autonomia"/>
-    </android.support.design.widget.TextInputLayout>
+                android:layout_marginTop="@dimen/dimen_2dp"
+                android:text="@string/km_por_litro"
+                android:textAllCaps="true"
+                android:textColor="@color/colorDarkGray"
+                android:textSize="@dimen/dimen_10sp"
+                app:layout_constraintTop_toBottomOf="@id/editAutonomy"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-    <TextView
-            android:id="@+id/textResult"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/inputLayoutAutonomy"
-            app:layout_constraintBottom_toTopOf="@id/btn_calcular"
-            tools:text="@string/label_cash"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/dimen_24_sp"/>
+        <TextView
+                android:id="@+id/labelTexto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_26dp"
+                android:text="@string/seu_gasto_total_sera_de"
+                android:textAllCaps="true"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/dimen_16sp"
+                app:layout_constraintTop_toBottomOf="@id/labelAutonomy"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-    <Button
-            android:layout_marginTop="@dimen/dimen_26_dp"
-            android:id="@+id/btn_calcular"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/calcular"
-            android:textAllCaps="true"
-            app:layout_constraintTop_toBottomOf="@id/textResult"
-            app:layout_constraintStart_toStartOf="parent"
-            android:textSize="@dimen/dimen_24_sp"/>
+        <TextView
+                android:id="@+id/textResult"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="24dp"
+                android:text="@string/label_cash"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:textColor="@color/salmon"
+                android:textSize="@dimen/dimen_35sp"
+                android:gravity="center"
+                app:layout_constraintTop_toBottomOf="@id/labelTexto"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+                android:id="@+id/btn_calcular"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_80dp"
+                android:layout_margin="@dimen/dimen_10dp"
+                android:text="@string/calcular"
+                android:textColor="@android:color/white"
+                android:textAllCaps="true"
+                android:textSize="@dimen/dimen_24sp"
+                android:background="@drawable/custom_button"
+                app:layout_constraintTop_toBottomOf="@id/textResult"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+</android.support.v4.widget.NestedScrollView>
