--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -2,9 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle"
        android:padding="10dp">
-    <solid android:color="@color/colorPrimaryDark"/>
-    <stroke android:color="@color/colorDarkGray"
-            android:width="1dp"/>
+    <solid android:color="@color/colorPrimary"/>
+
+    <stroke android:color="@color/colorPrimaryDark"
+            android:width="2dp"/>
+
     <corners android:topLeftRadius="6dp"
              android:topRightRadius="6dp"
              android:bottomLeftRadius="6dp"
