--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,155 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".MainActivity"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorLightGray">
+
     <android.support.constraint.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MainActivity"
             android:id="@+id/constraintLayout">
 
-        <EditText
-                android:id="@+id/editDistance"
+        <View
+                android:id="@+id/view"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_50dp"
-                android:textColor="@color/colorText"
-                android:textColorHint="@color/colorDarkGray"
-                android:textSize="@dimen/dimen_16sp"
-                android:hint="@string/distancia"
-                android:gravity="center"
-                android:elevation="@dimen/dimen_6dp"
-                android:inputType="number"
-                android:maxLines="1"
-                android:layout_marginTop="@dimen/dimen_15dp"
-                android:layout_marginLeft="@dimen/dimen_15dp"
-                android:layout_marginRight="@dimen/dimen_15dp"
-                android:background="@drawable/round_et"
+                android:layout_height="@dimen/dimen_3dp"
+                android:background="@color/colorPrimaryDark"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
+                android:id="@+id/editDistancia"
+                style="@style/mCustomEditText"
+                android:hint="@string/distancia"
+                android:elevation="@dimen/dimen_6dp"
+                app:layout_constraintTop_toBottomOf="@id/view"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
                 android:id="@+id/labelDistancia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_2dp"
-                android:text="@string/total_de_quilometros"
-                android:textAllCaps="true"
-                android:textColor="@color/colorDarkGray"
-                android:textSize="@dimen/dimen_10sp"
-                app:layout_constraintTop_toBottomOf="@id/editDistance"
+                style="@style/mCustomTextView"
+                android:text="@string/total_quilometros"
+                app:layout_constraintTop_toBottomOf="@id/editDistancia"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         <EditText
-                android:id="@+id/editPrice"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_50dp"
-                android:textColor="@color/colorText"
-                android:textColorHint="@color/colorDarkGray"
-                android:textSize="@dimen/dimen_16sp"
+                android:id="@+id/editPreco"
+                style="@style/mCustomEditText"
                 android:hint="@string/preco"
-                android:gravity="center"
                 android:elevation="@dimen/dimen_6dp"
-                android:inputType="number"
-                android:maxLines="1"
-                android:layout_marginTop="@dimen/dimen_15dp"
-                android:layout_marginLeft="@dimen/dimen_15dp"
-                android:layout_marginRight="@dimen/dimen_15dp"
-                android:background="@drawable/round_et"
                 app:layout_constraintTop_toBottomOf="@id/labelDistancia"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
                 android:id="@+id/labelPreco"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_2dp"
-                android:text="@string/preco_por_litro"
-                android:textAllCaps="true"
-                android:textColor="@color/colorDarkGray"
-                android:textSize="@dimen/dimen_10sp"
-                app:layout_constraintTop_toBottomOf="@id/editPrice"
+                style="@style/mCustomTextView"
+                android:text="@string/preco_litro"
+                app:layout_constraintTop_toBottomOf="@id/editPreco"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         <EditText
-                android:id="@+id/editAutonomy"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_50dp"
-                android:textColor="@color/colorText"
-                android:textColorHint="@color/colorDarkGray"
-                android:textSize="@dimen/dimen_16sp"
+                android:id="@+id/editAutonomia"
+                style="@style/mCustomEditText"
                 android:hint="@string/autonomia"
-                android:gravity="center"
                 android:elevation="@dimen/dimen_6dp"
-                android:inputType="number"
-                android:maxLines="1"
-                android:layout_marginTop="@dimen/dimen_15dp"
-                android:layout_marginLeft="@dimen/dimen_15dp"
-                android:layout_marginRight="@dimen/dimen_15dp"
-                android:background="@drawable/round_et"
                 app:layout_constraintTop_toBottomOf="@id/labelPreco"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
-                android:id="@+id/labelAutonomy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_2dp"
+                android:id="@+id/labelAutonomia"
+                style="@style/mCustomTextView"
                 android:text="@string/km_por_litro"
-                android:textAllCaps="true"
-                android:textColor="@color/colorDarkGray"
-                android:textSize="@dimen/dimen_10sp"
-                app:layout_constraintTop_toBottomOf="@id/editAutonomy"
+                app:layout_constraintTop_toBottomOf="@id/editAutonomia"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
-                android:id="@+id/labelTexto"
+                android:id="@+id/labelGastoTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_26dp"
-                android:text="@string/seu_gasto_total_sera_de"
+                android:text="@string/gasto_total"
                 android:textAllCaps="true"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/dimen_16sp"
-                app:layout_constraintTop_toBottomOf="@id/labelAutonomy"
+                app:layout_constraintTop_toBottomOf="@id/labelAutonomia"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
-                android:id="@+id/textResult"
+                android:id="@+id/labelResult"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_marginTop="24dp"
+                android:layout_margin="@dimen/dimen_15dp"
                 android:text="@string/label_cash"
                 android:textStyle="bold"
                 android:textAllCaps="true"
                 android:textColor="@color/salmon"
                 android:textSize="@dimen/dimen_35sp"
                 android:gravity="center"
-                app:layout_constraintTop_toBottomOf="@id/labelTexto"
+                app:layout_constraintTop_toBottomOf="@id/labelGastoTotal"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
+                app:layout_constraintEnd_toEndOf="parent"/>
 
         <Button
-                android:id="@+id/btn_calcular"
+                android:id="@+id/btnCalcular"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_80dp"
-                android:layout_margin="@dimen/dimen_10dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dimen_15dp"
+                android:padding="@dimen/dimen_20dp"
                 android:text="@string/calcular"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorLightGray"
                 android:textAllCaps="true"
-                android:textSize="@dimen/dimen_24sp"
+                android:textSize="@dimen/dimen_20sp"
                 android:background="@drawable/custom_button"
-                app:layout_constraintTop_toBottomOf="@id/textResult"
+                app:layout_constraintTop_toBottomOf="@id/labelResult"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
